Finish all but k8s
