# Sources/Vehicle/Domain/Entities/Payment.swift
@@ -2,6 +2,7 @@ import Foundation
 
 struct Payment {
     let paymentId: UUID
+    let vehicleId: UUID
     let status: PaymentStatus
     let receivedAt: Date
 }
